k8s-Dir/frontend/frontend-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-innocode"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-session-cache: "shared:SSL:10m"
    nginx.ingress.kubernetes.io/ssl-session-timeout: "10m"
    # nginx.ingress.kubernetes.io/proxy-body-size: 26m
spec:
  ingressClassName: "nginx"
  tls:
    
    - secretName: frontend-genio-ae-ssl
      hosts:
        - app.genio.ae

  rules:
  
    - host: app.genio.ae
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
